--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>PRIMER TITULO H1</h1>
+    <h2>SEGUNDO TITULO H2</h2>
+    <h3>TERCER TITULO H3</h3>
+    <h4>CUARTO TITULO H4</h4>
+    <h5>QUINTO TITULO H5</h5>
+    <h6>SEXTO TITULO H6</h6>
 </body>
 </html>
