Generar nueva linea al presionar el link

--- a/link.html
+++ b/link.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Generar link en <h1>
         <a href="https://www.google.com">Google</a>
-        <a href="/html/"></a>
+        <br>
+        <a href="/html/link2.html"  target="_blank">Ingresar al Link 02</a>
     </body>
 </html>
