--- a/link2.html
+++ b/link2.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Pagina 01 HTML</h1>
     <P>Nuevo contenido pagina 01</P>
+    <a href="link.html">Ir a Inicio Link</a>
 </body>
 </html>
