--- a/aplicarcss.html
+++ b/aplicarcss.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicacionde Estilos en HTML</title>
+    <title>Aplicar Estilos en HTML</title>
 </head>
-<body style="background-color: orange">
-    <h1>Aplicacion de Estilos con CSS</h1>
+<!--Comentarios-->
+<body style="background-color: gold;">
+    <h1 style="color: blueviolet; font-size: 50px;">Aplicacion de Estilos en CSS</h1>
     <img src="/img/css3.png" alt="Logo CSS3">
-    <p style="color: brown;" title="Parrafo de Estilos">Este es un parrafo de ejemplo para aplicar estilos con CSS</p>
+    <p style="color: brown; font-family: 'Courier New', Courier, monospace;" title="Parrafo de Estilos">Este es un parrafo de ejemplo para aplicar estilos con CSS</p>
 
 </body>
 </html>
