--- a/acercademi01.html
+++ b/acercademi01.html
@@ -10,6 +10,8 @@
     <hr>
     <p>Empresa con mas de 10 años de experiencia Online</p>
         <a href="https://github.com/YonaikerEscalante" target="_blank">Ir a pagina web</a>
+        <br><br>
+        <a href="mailto:yonaiker279@gmail.com?subject=Contacto&body=Prueba email">Enviar Email</a>
     <br><br>
         <a href="ejercicio01.html">Inicio</a>
 
