--- a/html12-BoxModelCSS/boxmodelcss.html
+++ b/html12-BoxModelCSS/boxmodelcss.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contenido</title>
     <link rel="stylesheet" href="css/style.css">
+    <title>Box Model</title>
 </head>
 <body>
-    <h1>Este es el contenido para ver los estilos</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <a href="introduccioncss.html">Inicio</a>
-    
+    <h1>Box Model en CSS</h1>
+    <p>Este es el parrafo 1</p>
+    <p>Este es el parrafo 2</p>
 </body>
 </html>
